MESA 24.1 - broken zink OpenGL under Windows
System information
- OS: Windows 10 / 11
- GPU: AMD Vega / 3 diff. NVIDIA GPUs
- Mesa version: 24.1+
Describe the issue
set GALLIUM_DRIVER d3d12 - no issue
set GALLIUM_DRIVER zink - apps fail to start
Tested with GPUShark 2 64 bit and OpenGLCapsViewer 1.2 32 bit
Output from Hexrays IDA
7FF8AB6A3E22: The instruction at 0x7FF8AB6A3E22 referenced memory at 0x0. The memory could not be read -> 0000000000000000 (exc.code c0000005, tid 5296)
PDBSRC: loading symbols for 'C:\Programme2\Geeks3D\gpushark2\libgallium_wgl.dll'...
Regression
There are 2 borked commits
Feb 15, 2024
wgl: Add no-gdi-single-buffered and gdi-double-buffered PFDs - fail
wgl: Flush frontbuffer when calling swapbuffers on single-buffered fb - OK
Apr 22, 2024
zink: don't print error messages when failing an implicit driver load - fail
pipe-loader: plumb a flag for implicit driver load through screen creation - OK
Any extra information would be greatly appreciated
Workaround: rollback \src\gallium\frontends\wgl\stw_pixelformat.c and complete zink folder to create a "frankensteined" MESA24.2-devel driver